added user auth
